@@ -1,3 +1,5 @@
-MD5 cf380eb6669326821d014d5a5383e4e6 ChangeLog 406
-MD5 69d994e582f77e6e8c332f4bc408e2dd tvmovie2vdr-0.0.9.ebuild 2420
+MD5 acd23a4a62c8a6f8aa08c2e45b81f6cf ChangeLog 533
+MD5 5fd6f6f6d0a6c5110fc5d38f4cb2908d tvmovie2vdr-0.0.9.ebuild 2545
+MD5 ba0ddc121fd25a73217086927618591c tvmovie2vdr-0.1.2.ebuild 2428
 MD5 87f2bfd52ec9f61377a4acbaf49b6eb1 files/digest-tvmovie2vdr-0.0.9 68
+MD5 d11a486a9a39fd6d062a688cab1a209e files/digest-tvmovie2vdr-0.1.2 68
